Edit table responsivness

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                             <!-- Cap -->
                             <div class="form-group text-black col 12 col-md-12">
                               <label class="mb-1" for="cap">CAP</label>
-                              <input type="number" class="form-control my_form-control mb-3" id="cap">
+                              <input type="text" class="form-control my_form-control mb-3" id="cap">
                             </div>
 
                             <!-- Upload -->
@@ -406,10 +406,10 @@
                       <thead>
                         <tr>
                           <th class="my_table-name" scope="col">Nome</th>
-                          <th scope="col" class="my-table-small">
+                          <th scope="col" class="my-table-small d-none d-md-table-cell">
                             Data inizio
                           </th>
-                          <th class="my-table-small" scope="col">ROI</th>
+                          <th class="my-table-small d-none d-md-table-cell" scope="col">ROI</th>
                           <th class="my-table-small" scope="col">Stato</th>
                           <th class="my-table-small" scope="col">Azioni</th>
                         </tr>
@@ -424,8 +424,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
@@ -455,8 +455,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
@@ -486,8 +486,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
@@ -517,8 +517,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
@@ -548,8 +548,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
@@ -579,8 +579,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
@@ -610,8 +610,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
@@ -641,8 +641,8 @@
                             />
                             Classe 75
                           </td>
-                          <td class="">15 Feb 2021</td>
-                          <td class="">20%</td>
+                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell">20%</td>
                           <td>
                             <span class="badge badge-success bg-success"
                               >Done</span
