Fix searchbar going over icons and logo

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <body>
     <header>
       <!-- Image and text -->
-      <nav class="container-fluid w-100">
+      <nav class="">
         <!-- Logo -->
-        <div class="d-flex align-items-center justify-content-between my_navbar w-100">
+        <div class=" container-fluid gap-3 d-flex align-items-center justify-content-between my_navbar">
           <!-- Logo-sm -->
           <div class="my_nav_l d-none d-lg-inline-block">
             <a class="#my_logo-nav-md" href="#">
@@ -68,25 +68,9 @@
           </div>
 
           <!-- searchbar -->
-          <div class="my_nav_m">
-            <form class="form-inline">
-              <div class="input-group">
-                <div class="input-group-prepend border-0">
-                  <span
-                    class="my_searchbar-height input-group-text border-0 rounded-0 rounded-start"
-                    id="basic-addon1"
-                    ><i class="fa-solid fa-magnifying-glass"></i
-                  ></span>
-                </div>
-                <input
-                  type="text"
-                  class="my_searchbar-height form-control my_bg-light-grey border-0"
-                  placeholder="Prova a cercare: Lezioni di Laravel"
-                  aria-label="Username"
-                  aria-describedby="basic-addon1"
-                />
-              </div>
-            </form>
+          <div class="my_nav_m input-group ">
+                  <span class="my_searchbar-height input-group-text border-0 rounded-0 rounded-start" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span>
+                <input type="text"class="my_searchbar-height form-control my_bg-light-grey border-0"placeholder="Prova a cercare: Lezioni di Laravel"aria-label="Username"aria-describedby="basic-addon1"/>
           </div>
 
           <!-- menu right -->
