Add content and text center to tab in classes card

--- a/index.html
+++ b/index.html
@@ -390,12 +390,12 @@
                       <thead>
                         <tr>
                           <th class="my_table-name" scope="col">Nome</th>
-                          <th scope="col" class="my-table-small d-none d-md-table-cell">
+                          <th scope="col" class="my-table-small d-none d-md-table-cell text-center">
                             Data inizio
                           </th>
-                          <th class="my-table-small d-none d-md-table-cell" scope="col">ROI</th>
-                          <th class="my-table-small" scope="col">Stato</th>
-                          <th class="my-table-small" scope="col">Azioni</th>
+                          <th class="my-table-small d-none d-md-table-cell text-center" scope="col">ROI</th>
+                          <th class="my-table-small text-center" scope="col">Stato</th>
+                          <th class="my-table-small text-center" scope="col">Azioni</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -408,9 +408,39 @@
                             />
                             Classe 75
                           </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
+                          <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
+                            <span class="badge badge-success bg-success ">Done</span
+                            >
+                          </td>
+                          <td class="d-flex">
+                            <button
+                              type="button"
+                              class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center"
+                            >
+                              <i class="fa-solid fa-pencil fa-xs"></i>
+                            </button>
+                            <button
+                              type="button"
+                              class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center"
+                            >
+                              <i class="fa-solid fa-trash fa-xs"></i>
+                            </button>
+                          </td>
+                        </tr>
+                        <tr>
                           <td>
+                            <img
+                              class="my_class-avatar me-2"
+                              src="img/class-avatar.jpg"
+                              alt="class avatar logo"
+                            />
+                            Classe 75
+                          </td>
+                          <td class="d-none d-md-table-cell text-center">16 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
                             <span class="badge badge-success bg-success"
                               >Done</span
                             >
@@ -439,12 +469,10 @@
                             />
                             Classe 75
                           </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
-                          <td>
-                            <span class="badge badge-success bg-success"
-                              >Done</span
-                            >
+                          <td class="d-none d-md-table-cell text-center">17 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
+                            <span class="badge badge-warning bg-warning">process</span>
                           </td>
                           <td class="d-flex">
                             <button
@@ -470,12 +498,10 @@
                             />
                             Classe 75
                           </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
-                          <td>
-                            <span class="badge badge-success bg-success"
-                              >Done</span
-                            >
+                          <td class="d-none d-md-table-cell text-center">18 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
+                            <span class="badge badge-success bg-success">Done</span>
                           </td>
                           <td class="d-flex">
                             <button
@@ -501,12 +527,10 @@
                             />
                             Classe 75
                           </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
-                          <td>
-                            <span class="badge badge-success bg-success"
-                              >Done</span
-                            >
+                          <td class="d-none d-md-table-cell text-center">19 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
+                            <span class="badge badge-danger bg-danger">failed</span>
                           </td>
                           <td class="d-flex">
                             <button
@@ -532,12 +556,10 @@
                             />
                             Classe 75
                           </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
-                          <td>
-                            <span class="badge badge-success bg-success"
-                              >Done</span
-                            >
+                          <td class="d-none d-md-table-cell text-center">20 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
+                            <span class="badge badge-success bg-success">Done</span>
                           </td>
                           <td class="d-flex">
                             <button
@@ -563,12 +585,10 @@
                             />
                             Classe 75
                           </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
-                          <td>
-                            <span class="badge badge-success bg-success"
-                              >Done</span
-                            >
+                          <td class="d-none d-md-table-cell text-center">21 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
+                            <span class="badge badge-danger bg-danger">failed</span>
                           </td>
                           <td class="d-flex">
                             <button
@@ -594,43 +614,10 @@
                             />
                             Classe 75
                           </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
-                          <td>
-                            <span class="badge badge-success bg-success"
-                              >Done</span
-                            >
-                          </td>
-                          <td class="d-flex">
-                            <button
-                              type="button"
-                              class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center"
-                            >
-                              <i class="fa-solid fa-pencil fa-xs"></i>
-                            </button>
-                            <button
-                              type="button"
-                              class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center"
-                            >
-                              <i class="fa-solid fa-trash fa-xs"></i>
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <img
-                              class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
-                              alt="class avatar logo"
-                            />
-                            Classe 75
-                          </td>
-                          <td class="d-none d-md-table-cell">15 Feb 2021</td>
-                          <td class="d-none d-md-table-cell">20%</td>
-                          <td>
-                            <span class="badge badge-success bg-success"
-                              >Done</span
-                            >
+                          <td class="d-none d-md-table-cell text-center">22 Feb 2021</td>
+                          <td class="d-none d-md-table-cell text-center">20%</td>
+                          <td class="text-center">
+                            <span class="badge badge-success bg-success">Done</span>
                           </td>
                           <td class="d-flex">
                             <button
