Add accordion content and style

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                     <h2 class="my_h2">F.A.Q.</h2>
                   </div>
   
-                  <div class="card-body">
+                  <div class="card-body p-1">
                     <!-- Accordion -->
                     <div
                       class="accordion accordion-flush"
@@ -658,27 +658,16 @@
                           id="flush-headingOne"
                         >
                           <button
-                            class="accordion-button collapsed py-3"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseOne"
-                            aria-expanded="false"
-                            aria-controls="flush-collapseOne"
+                            class="accordion-button my-text collapsed py-3" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"
                           >
                             Come aggiungere un nuovo studente?
                           </button>
                         </h2>
                         <div
-                          id="flush-collapseOne"
-                          class="accordion-collapse collapse"
-                          aria-labelledby="flush-headingOne"
-                          data-bs-parent="#accordionFlushExample"
+                          id="flush-collapseOne" class="accordion-collapse collapse my-text" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample"
                         >
                           <div class="accordion-body">
-                            Placeholder content for this accordion, which is
-                            intended to demonstrate the
-                            <code>.accordion-flush</code> class. This is the
-                            first item's accordion body.
+                            Clicca sul + in alto nella sezione blu.
                           </div>
                         </div>
                       </div>
@@ -689,29 +678,17 @@
                           id="flush-headingTwo"
                         >
                           <button
-                            class="accordion-button collapsed py-3"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseTwo"
-                            aria-expanded="false"
-                            aria-controls="flush-collapseTwo"
+                            class="accordion-button collapsed my-text py-3" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo"
                           >
                             Come posso accedere alle informazioni del mio
                             account?
                           </button>
                         </h2>
                         <div
-                          id="flush-collapseTwo"
-                          class="accordion-collapse collapse"
-                          aria-labelledby="flush-headingTwo"
-                          data-bs-parent="#accordionFlushExample"
+                          id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample"
                         >
-                          <div class="accordion-body">
-                            Placeholder content for this accordion, which is
-                            intended to demonstrate the
-                            <code>.accordion-flush</code> class. This is the
-                            second item's accordion body. Let's imagine this
-                            being filled with some actual content.
+                          <div class="accordion-body my-text">
+                            Clicca sull'icona della campanella.
                           </div>
                         </div>
                       </div>
@@ -719,31 +696,15 @@
                       <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingThree">
                           <button
-                            class="accordion-button collapsed py-3"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseThree"
-                            aria-expanded="false"
-                            aria-controls="flush-collapseThree"
+                            class="accordion-button collapsed my-text py-3" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree"
                           >
                             Posso usare la dashboard da mobile?
                           </button>
                         </h2>
                         <div
-                          id="flush-collapseThree"
-                          class="accordion-collapse collapse"
-                          aria-labelledby="flush-headingThree"
-                          data-bs-parent="#accordionFlushExample"
-                        >
-                          <div class="accordion-body">
-                            Placeholder content for this accordion, which is
-                            intended to demonstrate the
-                            <code>.accordion-flush</code> class. This is the
-                            third item's accordion body. Nothing more exciting
-                            happening here in terms of content, but just
-                            filling up the space to make it look, at least at
-                            first glance, a bit more representative of how
-                            this would look in a real-world application.
+                          id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body my-text">
+                            Assolutamente sì, tutte le funzionalità rimarranno intatte.
                           </div>
                         </div>
                       </div>
