Fix blue header plus circle and sintax

--- a/index.html
+++ b/index.html
@@ -311,51 +311,33 @@
                       <h1 class="me-2 my_h1">Boolean</h1>
                       <ul class="nav nav-pills">
                         <li class="my-bg-md-blue text-light rounded-pill">
-                          <a class="text-reset text-decoration-none p-2" href="#"
-                            >Piano blaze</a
-                          >
+                          <a class="text-reset text-decoration-none p-2" href="#">Piano blaze</a>
                         </li>
                       </ul>
                     </div>
   
                     <div class="d-flex align-items-center">
-                      <ul class="nav nav-pills">
+                      <ul class="nav nav-pills align-items-center">
                         <li class="my-bg-md-blue text-light rounded-pill m-1">
-                          <a class="text-reset text-decoration-none p-2" href="#"
-                            >3 app</a
-                          >
+                          <a class="text-reset text-decoration-none p-2" href="#">3 app</a>
                         </li>
                         <li class="m-1">
                           <i class="fa-solid fa-angles-right"></i>
                         </li>
   
                         <!-- Display only in lg -->
-                        <li
-                          class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1"
-                        >
-                          <a class="text-reset text-decoration-none p-2" href="#"
-                            >Boolean mobile app</a
-                          >
+                        <li class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1">
+                          <a class="text-reset text-decoration-none p-2" href="#">Boolean mobile app</a>
                         </li>
-                        <li
-                          class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1"
-                        >
-                          <a class="text-reset text-decoration-none p-2" href="#"
-                            >Boolean web app</a
-                          >
+                        <li class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1">
+                          <a class="text-reset text-decoration-none p-2" href="#">Boolean web app</a>
                         </li>
-                        <li
-                          class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1"
-                        >
-                          <a class="text-reset text-decoration-none p-2" href="#"
-                            >Boolean blog app</a
-                          >
+                        <li class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1">
+                          <a class="text-reset text-decoration-none p-2" href="#">Boolean blog app</a>
                         </li>
                         <!-- End display only in lg -->
   
-                        <li
-                          class="d-lg-none my-bg-md-blue text-light me-1 rounded-circle my_circle-plus d-flex align-items-center justify-content-center"
-                        >
+                        <li class="d-lg-none my-bg-md-blue text-light me-1 rounded-circle my_circle-plus d-flex align-items-center justify-content-center">
                           <a class="text-reset text-decoration-none">
                             <i class="fa-solid fa-plus"></i>
                           </a>
