--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
                 <div class="row justify-content-between bg-primary py text-light">
                   <!-- Add Students -->
                   <div
-                    class="my-3 col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-md-end order-md-3"
-                  >
+                    class="my-3 col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-md-end order-md-3">
                     <p class="m-0">Nuovo Studente</p>
   
                     <button
@@ -359,7 +358,7 @@
             <!-- main app cards -->
             <div class="row h-100 p-3 m-0">
               <!-- Main app left -->
-              <div class="col-12 col-lg-8 my_main-app-l my-text">
+              <div class="col-12 col-lg-8 my_main-app-l my-text mb-4">
                 <!-- Table Card-->
                 <div class="card mb-4">
                   <div class="card-header">
