change cap input type to text

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                             <!-- Cap -->
                             <div class="form-group text-black col 12 col-md-12">
                               <label class="mb-1" for="cap">CAP</label>
-                              <input type="number" class="form-control my_form-control mb-3" id="cap">
+                              <input type="text" class="form-control my_form-control mb-3" id="cap">
                             </div>
 
                             <!-- Upload -->
