Add over to sidebar

--- a/index.html
+++ b/index.html
@@ -111,24 +111,24 @@
               <!-- Upper sidebar -->
               <div class="upper sidebar">
                 <ul class="list-unstyled">
-                  <li class="my_sidebar-li text-center">
+                  <li class="my_sidebar-li text-center pe-2">
                     <a class="text-reset text-decoration-none" href="">
                       <i class="fa-solid fa-house p-1"></i>
-                      <p class="d-none d-lg-inline-block">Home</p>
+                      <p class="d-none d-lg-inline-block my-2">Home</p>
                     </a>
                   </li>
   
-                  <li class="my_sidebar-li text-center">
+                  <li class="my_sidebar-li text-center pe-2">
                     <a class="text-reset text-decoration-none" href="">
                       <i class="fa-solid fa-chart-simple p-1"></i>
-                      <p class="d-none d-lg-inline-block">Stats</p>
+                      <p class="d-none d-lg-inline-block my-2">Stats</p>
                     </a>
                   </li>
   
-                  <li class="my_sidebar-li text-center">
+                  <li class="my_sidebar-li text-center pe-2">
                     <a class="text-reset text-decoration-none" href="">
                       <i class="fa-solid fa-signal p-1"></i>
-                      <p class="d-none d-lg-inline-block">Signal</p>
+                      <p class="d-none d-lg-inline-block my-2">Signal</p>
                     </a>
                   </li>
                 </ul>
@@ -138,10 +138,10 @@
               <!-- Bottom sidebar -->
               <div class="bottom sidebar">
                 <ul class="list-unstyled">
-                  <li class="my_sidebar-li text-center">
+                  <li class="my_sidebar-li text-center pe-2">
                     <a class="text-reset text-decoration-none" href="">
                       <i class="fa-solid fa-gear p-1"></i>
-                      <p class="d-none d-lg-inline-block">Admin</p>
+                      <p class="d-none d-lg-inline-block my-2">Admin</p>
                     </a>
                   </li>
                 </ul>
