Fix avatar image

--- a/index.html
+++ b/index.html
@@ -267,7 +267,10 @@
                               <label class="mb-1 text-black" for="address">Stato</label>
                               <select id="inputState" class="form-control my_form-control mb-3">
                                 <option selected>Scegli...</option>
-                                <option>...</option>
+                                <option>Italia</option>
+                                <option>Francia</option>
+                                <option>Svizzera</option>
+                                <option>Germania</option>
                               </select>
                             </div>
 
@@ -384,7 +387,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
@@ -414,7 +417,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
@@ -445,7 +448,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
@@ -474,7 +477,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
@@ -503,7 +506,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
@@ -532,7 +535,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
@@ -561,7 +564,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
@@ -590,7 +593,7 @@
                           <td>
                             <img
                               class="my_class-avatar me-2"
-                              src="img/class-avatar.jpg"
+                              src="img/class-avatar.png"
                               alt="class avatar logo"
                             />
                             Classe 75
