--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap dashboard</title>
 
     <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <!-- link al css -->
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/style.css">
 
     <!-- Media queries -->
-    <link rel="stylesheet" href="style/style-m.css" />
+    <link rel="stylesheet" href="style/style-m.css">
 
     <!-- FONT AWESOME 6.4.0 -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- FONT  -->
     <!-- FAVICON -->
 
     <!-- Bootstrap js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -46,14 +34,14 @@
           <!-- Logo-sm -->
           <div class="my_nav_l d-none d-lg-inline-block">
             <a class="#my_logo-nav-md" href="#">
-              <img id="my_logo-nav-lg" src="img/logo.svg" class="d-inline-block align-top" alt=""/>
+              <img id="my_logo-nav-lg" src="img/logo.svg" class="d-inline-block align-top" alt="">
             </a>
           </div>
 
           <div class="my_nav_l d-inline-block d-lg-none">
             <!-- Logo md -->
             <a class="" href="#">
-              <img id="my_logo-nav-md" src="img/mobile-logo.png" class="d-inline-block align-top" alt=""/>
+              <img id="my_logo-nav-md" src="img/mobile-logo.png" class="d-inline-block align-top" alt="">
             </a>
           </div>
 
@@ -62,7 +50,7 @@
                   <span class="my_searchbar-height input-group-text border-0 rounded-0 rounded-start" id="basic-addon1">
                     <i class="fa-solid fa-magnifying-glass"></i>
                   </span>
-                <input type="text" class="my_searchbar-height form-control my_bg-light-grey border-0" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Username" aria-describedby="basic-addon1"/>
+                <input type="text" class="my_searchbar-height form-control my_bg-light-grey border-0" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Username" aria-describedby="basic-addon1">
           </div>
 
           <!-- menu right -->
@@ -262,7 +250,7 @@
                             <div class="form-group text-black col 12 ">
                               <label class="mb-1" for="cap">Foto</label>
                               <label class="form-label" for="customFile"></label>
-                              <input type="file" class="form-control my_form-control mb-3" id="customFile" />    
+                              <input type="file" class="form-control my_form-control mb-3" id="customFile">    
                             </div>
 
                           </div>
@@ -363,7 +351,7 @@
                       <tbody>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">15 Feb 2021</td>
@@ -383,7 +371,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">16 Feb 2021</td>
@@ -403,7 +391,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">17 Feb 2021</td>
@@ -422,7 +410,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">18 Feb 2021</td>
@@ -441,7 +429,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">19 Feb 2021</td>
@@ -460,7 +448,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">20 Feb 2021</td>
@@ -479,7 +467,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">21 Feb 2021</td>
@@ -498,7 +486,7 @@
                         </tr>
                         <tr>
                           <td>
-                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo"/>
+                            <img class="my_class-avatar me-2" src="img/class-avatar.png" alt="class avatar logo">
                             Classe 75
                           </td>
                           <td class="d-none d-md-table-cell text-center">22 Feb 2021</td>
@@ -607,7 +595,7 @@
                     <ul class="list-group mb-0 border rounded-3">
                       <li class="list-group-item d-flex justify-content-between align-items-center border border-0 border-bottom border-bottom rounded-3">
                         <div class="d-flex align-items-center">
-                          <input  class="form-check-input me-2" type="checkbox" value="" aria-label="..."/>
+                          <input  class="form-check-input me-2" type="checkbox" value="" aria-label="...">
                           Kickoff nuove classi
                         </div>
                       </li>
@@ -615,13 +603,13 @@
                         class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0"
                       >
                         <div class="d-flex align-items-center">
-                          <input class="form-check-input me-2" type="checkbox" value="" aria-label="..." />
+                          <input class="form-check-input me-2" type="checkbox" value="" aria-label="...">
                           Lezione su Bootstrap 5 classe #75
                         </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center border-0 rounded-0 rounded-3">
                         <div class="d-flex align-items-center">
-                          <input class="form-check-input me-2" type="checkbox" value="" aria-label="..."/>
+                          <input class="form-check-input me-2" type="checkbox" value="" aria-label="...">
                           Controllare username github studenti
                         </div>
                       </li>
@@ -632,7 +620,7 @@
                 <!-- Graphics -->
                 <div class="card mb-3">
                   <div class="card m-3">
-                    <img class="card-img-top" src="img/stats.jpeg" alt="Card image cap"/>
+                    <img class="card-img-top" src="img/stats.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title my_h5">Utenti attivi</h5>
                       <p class="card-text">
